# namespace

./: LICENSE.md  README.md  pyproject.toml
namespace/: __init__.py  embed_name.py  filter_name.py  match_name.py  utilities.py
